fix product slug regeneration and variant select overflow

--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -31,7 +31,7 @@
 
 .grid-item-contents{
   margin-top:10px;
-  overflow:hidden;
+  overflow:visible;
   padding-bottom:10px;
 }
 
